[gd_scene load_steps=3 format=3 uid="uid://vp7vpukmulns"]

[ext_resource type="Script" uid="uid://b7qi2io2rc8ks" path="res://Script/hud.gd" id="1_cevek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs7re"]
bg_color = Color(0.866667, 0, 0.101961, 0.576471)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cevek")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 333.0
offset_bottom = 74.0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gs7re")
value = 100.0

[node name="SkillContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SkillSlot_E" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer/SkillContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SkillContainer/SkillSlot_E"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/SkillContainer/SkillSlot_E"]
layout_mode = 2
text = "E"

[node name="SkillSlot_Q" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer/SkillContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SkillContainer/SkillSlot_Q"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/SkillContainer/SkillSlot_Q"]
layout_mode = 2
text = "Q"
